@@ -73,12 +73,22 @@ public abstract class MyFacesBodyTag
 
     public int doEndTag() throws JspException
     {
-        UIComponent comp = getComponent();
-        comp.setAttribute(BODY_CONTENT_ATTR, getBodyContent());
-        int ret = super.doEndTag();
-        comp.setAttribute(BODY_CONTENT_ATTR, null);
-        return ret;
+        try
+        {
+            UIComponent comp = getComponent();
+            comp.setAttribute(BODY_CONTENT_ATTR, getBodyContent());
+            int ret = super.doEndTag();
+            comp.setAttribute(BODY_CONTENT_ATTR, null);
+            return ret;
+        }
+        finally
+        {
+            _helper.release();
+            setId(null);
+            setRendered(true);
+        }
     }
+
 
     public int getDoEndValue() throws JspException
     {
